tests/errors/surf_lib_19.ki
# base64.decode of an invalid character must throw.
var b = import("base64")
discard b.decode("####")
